compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__literals__tests__array_literal_generates_properly.snap
---
source: compiler/zrc_codegen/src/expr/literals.rs
description: "fn test() -> i32 {\n    let x = [1i32, 2i32, 3i32];\n    return x[1usize];\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i32 @test() !dbg !3 {
entry:
  %let_x = alloca [3 x i32], align 4
  %array_tmp = alloca [3 x i32], align 4, !dbg !7
  %elem_ptr = getelementptr i32, ptr %array_tmp, i64 0, !dbg !10
  store i32 1, ptr %elem_ptr, align 4, !dbg !10
  %elem_ptr1 = getelementptr i32, ptr %array_tmp, i64 1, !dbg !11
  store i32 2, ptr %elem_ptr1, align 4, !dbg !11
  %elem_ptr2 = getelementptr i32, ptr %array_tmp, i64 2, !dbg !12
  store i32 3, ptr %elem_ptr2, align 4, !dbg !12
  %array_val = load [3 x i32], ptr %array_tmp, align 4, !dbg !12
  store [3 x i32] %array_val, ptr %let_x, align 4, !dbg !13
  %load = load ptr, ptr %let_x, align 8, !dbg !14
  %gep = getelementptr i32, ptr %load, i64 1, !dbg !15
  %load3 = load i32, ptr %gep, align 4, !dbg !15
  ret i32 %load3, !dbg !15
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32")
!7 = !DILocation(line: 2, column: 13, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 1, column: 18)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 18)
!10 = !DILocation(line: 2, column: 14, scope: !8)
!11 = !DILocation(line: 2, column: 20, scope: !8)
!12 = !DILocation(line: 2, column: 26, scope: !8)
!13 = !DILocation(line: 2, column: 9, scope: !8)
!14 = !DILocation(line: 3, column: 12, scope: !8)
!15 = !DILocation(line: 3, column: 14, scope: !8)
