compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__literals__tests__regression_119_special_integer_literals.snap
---
source: compiler/zrc_codegen/src/expr/literals.rs
description: "fn test() {\n    let a = 0b10_10;\n    let b = 0x1F_A4;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %let_b = alloca i32, align 4
  %let_a = alloca i32, align 4
  store i32 10, ptr %let_a, align 4, !dbg !8
  store i32 8100, ptr %let_b, align 4, !dbg !11
  ret {} zeroinitializer, !dbg !12
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 2, column: 9, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 1, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 11)
!11 = !DILocation(line: 3, column: 9, scope: !9)
!12 = !DILocation(line: 4, column: 1, scope: !9)
